styleSponsors.css
/* ... */
  
  .sponsors-container {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    background-color: var(--blue);
    border-radius: 0 0 50% 50%;
    border-bottom: var(--forestGreen) 60px solid;
    background-position: top left;
    background-repeat: no-repeat;
    z-index: 1;
    width: 100%;
    max-width: 1920px;
    padding: 0 50px;
    /* top: 65px; */
    min-height: 100vh;
    position: relative;
  }
  
  .sponsors-container h1 {
    font-family: 'sani Sans';
    font-style: normal;
    font-weight: 700;
    font-size: 7rem;

    color: #FFFFFF;
    text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);  

    top: 100px;
    text-align: center;
    position: absolute;
  }

  .sponsors-container p {
    color: var(--white);
    font-size: 3rem;
    border: solid transparent 1px;
    top: 260px;
    width: 620px;
    align-items: center;
    text-align: center;
    justify-content: center;;
    position: absolute;
  }

  .sponsor-btn {
    font-size: 1.3rem;
    background-color: var(--darkBlue);
    padding: 14px 32px;
    border: none;
    outline: none;
    border-radius: 15px;
    color: #ffff;
    cursor: pointer;
    top: 175px;
    justify-content: center;
    align-items: center;
    position: relative;
    transition: all 0.35s;
    z-index: 2;
  }

  .sponsor-btn a {
    position: relative;
    z-index: 1;
    color: #fff;
    text-decoration: none;
  }

  .sponsor-btn:after {
    position: absolute;
    content: '';
    top: 0;
    left: 0;
    width: 0;
    height: 100%;
    background: var(--forestGreen);
    transition: all 0.35s;
    border-radius: 15px;
  }

  .sponsor-btn:hover {
    color: #fff;
  } 

  .sponsor-btn:hover:after {
    width: 100%;
  }
  

@media screen and (max-height: 900px) {
    .sponsors-container p {
        font-size: 3rem;
    }
    .sponsor-btn {
        top: 100px
    }
}

@media screen and (max-height: 800px) {
    .sponsors-container p {
        font-size: 1.5rem;
    }
    .sponsor-btn {
        top: 100px
    }
}


@media screen and (max-width: 1020px) {
    .sponsors {
        background-image: url("/images/TestFinalBlue.jpg");
        background-size: 40%;
        background-repeat: repeat;
        min-height: 90vh;
        border-top: var(--darkBlue) solid 10px;
    }

    .sponsors-container {
        z-index: 1;
        width: 100%;
        max-width: 1920px;
        padding: 0 50px;
        min-height: 100vh;
        position: relative;
    } 
    
    .sponsors-container h1 {
        font-size: 14vh;
        top: 100px;
        text-align: center;
        position: absolute;
    }
  
    .sponsors-container p {
        color: var(--white);
        font-size: 3vh;
        top: 240px;
        position: absolute;
    }

    .sponsor-btn {
        font-size: 1.2rem;
        padding: 12px 28px;
        /* top: 350px; */
    }
  }

@media screen and (max-width: 760px) {    
    .sponsors {
        background-image: url("/images/TestFinalBlue.jpg");
        background-size: 55%;
        background-repeat: repeat;
        min-height: 90vh;
    }
    
    .sponsors-container h1 {
        color: var(--white);
        font-size: 3rem;
        /* border: solid var(--darkBlue) 10px; */
        /* border-radius: 30px; */
        width: 260px;
        height: 80px;
        /* border-style: solid; */
        top: 100px;
        text-align: center;
        position: absolute;
    }
  
    .sponsors-container p {
        color: var(--white);
        font-size: 2.8vh;
        top: 200px;
        max-width: 350px;
        min-height: 100px;
        position: absolute;
    }

    .sponsor-btn {
        margin: auto 20px;
        font-size: 1rem;
        padding: 12px 14px;
        /* top: 370px; */
    }
  }

  @media screen and (max-width: 480px) {    
    .sponsor-btn {
        /* top: 340px; */
        right: 1%;
    }
  }

/* SPONSORS LIST */
    .sponsorsFlexbox-container {
        background-image: url("/images/TestFinalBlue.jpg");
        background-repeat: repeat;
        background-size: 20%;
        z-index: 1;
        width: 100%;
        max-width: 1920px;
        padding: 0 auto;
        border-bottom: var(--blue) 10px solid;
        border-radius: 0 0 0% 0%;
        min-height: 100vh;
        position: relative;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .sponsor-item {
        margin: 30px auto;
        position: relative;
        background-color: inherit;
        width: 70%;
        min-height: 400px;
    }

    .sponsor-item h1 {
        font-size: calc(4vw - .005rem);
        color: var(--black);
        display: flex;
        margin: 10px;
        justify-content: center;
        align-items: center;
    }

    .list-content {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        padding: 20px 30px;
        border: 10px solid var(--lightBlue);
        background-color: var(--darkBlue);
        position: relative;
        border-radius: 20px;
    }

    #sponsorPic {
        max-width: 350px;
        min-height: 125px;
        border-radius: 20px;
        padding: 5px 10px;
    }

    /* .platinum-box {
        background-color: var(--white);
        max-width: 800px;
        border: 8px solid var(--lightBlue);
        border-radius: 20px;
        margin: 10px auto;
    }

    .platinum-box:hover {
        cursor: pointer;
        background-color: #d9d6d6;
        max-width: 800px;
        border: 8px solid #aeacac;
        border-radius: 20px;
        transition: all .3s ease;
        margin: 10px auto;
    }

    .gold-box {
        background-color: var(--white);
        max-width: 800px;
        border: 8px solid var(--lightBlue);
        border-radius: 20px;
        margin: 10px auto;
    }
/* ... */

